# expression_lab

./: .gitignore  CMakeLists.txt  main.c
application/: expressions.c  expressions.h  operations.c  operations.h
application/converting/: converter.c  converter.h
application/domain/: models.c  models.h
application/domain/commands/: expressions.c  expressions.h
application/domain/converting/: converter.c  converter.h
application/parsing/: parser.c  parser.h
memory/: stats.c  stats.h
